@@ -14,7 +14,6 @@ Pygments = 1.6
 Sphinx = ${versions:sphinx}
 Sphinx-PyPI-upload = 0.2.1
 buildout-versions = 1.7
-configobj = 4.7.2
 cov-core = 1.7
 coverage = 3.6
 docutils = 0.10
