@@ -5,7 +5,9 @@ Changelog
 1.0b11 (unreleased)
 ===================
 
-- Nothing changed yet.
+- Use ConfigParser instead of configobj which is effectively unmaintained
+  (see https://twitter.com/voidspace/status/380699699042213889) and support
+  lists separated by newlines in addition to commas.
 
 
 1.0b10 (2013-09-27)
